--- a/src/components/Permit/PermitForm/form.css
+++ b/src/components/Permit/PermitForm/form.css
@@ -13,3 +13,10 @@ span.span-in-line{
     display: inline !important;
     margin-right: 10px;
 }
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+    width: 100%;
+    height: 40px !important;
+    padding: 3px 11px !important;
+    font-size: 16px !important;
+}
