--- a/src/components/Permit/PermitForm/form.css
+++ b/src/components/Permit/PermitForm/form.css
@@ -3,6 +3,14 @@ span.span-in-line{
     padding: 5px;
 }
 
+.div-in-line {
+    display: inline !important;
+}
+
+.title-in-line {
+    font-size: 1.1rem !important;
+}
+
 .terms-text {
     font-size: 0.6rem;
     line-height: initial;
